deploy: f177258a90dbc99828105443e3ff186d634ab676

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <base href="/">
+    <base href="/english-social-media-project/">
 
     <title>Svelte SPA template</title>
 
@@ -14,7 +14,7 @@
     <meta property="og:image:alt" content="svelte logo">
     <meta property="og:type" content="website">
     <meta property="og:description" content="svelte is the very cool">
-  <link rel="stylesheet" href="/_dist_/index.css"></head>
+  <link rel="stylesheet" href="/english-social-media-project/_dist_/index.css"></head>
   <body>
     <noscript style="display: flex; align-items: center; justify-content: center">
       <span>
