--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,16 +10,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="module" defer src="_dist_/index.js"></script>
 
-    <meta name="description" content="the best discord bot to ever exist" />
-    <meta property="og:title" content="svelte spa template" />
+    <meta property="og:title" content="pigeon social media" />
     <meta property="og:image" content="svelte.png" />
-    <meta property="og:image:alt" content="svelte logo" />
+    <meta property="og:image:alt" content="pigeon logo" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="svelte is the very cool" />
+    <meta property="og:description" content="social media for beowulf project" />
+
+    <meta name="description" content="social media for beowulf project" />
   </head>
   <body>
     <noscript style="display: flex; align-items: center; justify-content: center">
-      <span>
+      <span style="font-family: sans-serif">
         You need to enable JavaScript to view this app. Here are the
         <a href="https://www.enable-javascript.com/">
           instructions on how to enable JavaScript in your web browser</a
