deploy: 89ed233ebcc5a832ccd93edea1e9eb18ae0d53f7

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <base href="/english-social-media-project/">
+    <base href="/pigeon-project/">
 
     <title>Svelte SPA template</title>
 
@@ -8,16 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" defer="" src="_dist_/index.js"></script>
 
-    <meta name="description" content="the best discord bot to ever exist">
-    <meta property="og:title" content="svelte spa template">
+    <meta property="og:title" content="pigeon social media">
     <meta property="og:image" content="svelte.png">
-    <meta property="og:image:alt" content="svelte logo">
+    <meta property="og:image:alt" content="pigeon logo">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="svelte is the very cool">
-  <link rel="stylesheet" href="/english-social-media-project/_dist_/index.css"></head>
+    <meta property="og:description" content="social media for beowulf project">
+
+    <meta name="description" content="social media for beowulf project">
+  <link rel="stylesheet" href="/pigeon-project/_dist_/index.css"></head>
   <body>
     <noscript style="display: flex; align-items: center; justify-content: center">
-      <span>
+      <span style="font-family: sans-serif">
         You need to enable JavaScript to view this app. Here are the
         <a href="https://www.enable-javascript.com/">
           instructions on how to enable JavaScript in your web browser</a
