--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,15 +3,18 @@
   <head>
     <base href="%PUBLIC_URL%" />
 
-    <title>Svelte SPA template</title>
+    <title>pigeon</title>
 
     <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="module" defer src="_dist_/index.js"></script>
 
     <meta property="og:title" content="pigeon social media" />
-    <meta property="og:image" content="svelte.png" />
+    <meta
+      property="og:image"
+      content="https://wiisportsresort.github.io/pigeon-project/pigeon.png"
+    />
     <meta property="og:image:alt" content="pigeon logo" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="social media for beowulf project" />
