deploy: 616be3897a3b3b3f07b2a1b015c10435f681cd1c

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html><html lang="en"><head>
     <base href="/pigeon-project/">
 
-    <title>Svelte SPA template</title>
+    <title>pigeon</title>
 
     <meta charset="utf-8">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module" defer="" src="_dist_/index.js"></script>
 
     <meta property="og:title" content="pigeon social media">
-    <meta property="og:image" content="svelte.png">
+    <meta property="og:image" content="https://wiisportsresort.github.io/pigeon-project/pigeon.png">
     <meta property="og:image:alt" content="pigeon logo">
     <meta property="og:type" content="website">
     <meta property="og:description" content="social media for beowulf project">
